src/style/media.scss
@media (max-width: 1460px) {
  .css {
    &-1r4vtzz, &-48ayfv {
      width: 140px !important;
    }
  }
  .user-anime-list {
    grid-template-columns: 1fr 4fr;
  }
}

@media (max-width: 1350px) {
  .anime {
    &__wrapper {
      grid-template-columns: 2fr 1fr;
    }
    &__list {
      grid-template-columns: repeat(5, 1fr);
    }
  }
  .top-anime-slider {
    &__slide {
      height: 430px;
    }
    &__title {
      font-size: 33px !important;
    }
    &__descr {
      font-size: 16px;
    }
  }
  .related-anime {
    &__item {
      &-title {
        font-size: 15px;
      }
    }
  }
  .search-results {
    grid-template-columns: 2.5fr 1fr;
  }
  .css {
    &-1r4vtzz, &-48ayfv {
      width: 140px !important;
    }
  }
  .user-anime-list {
    grid-template-columns: 1fr 3fr;
  }
  .user-profile {
    padding: 0 60px;
  }
  .error-message {
    &_small {
      .error-message {
        &__img {
          width: 100px;
          height: 100px;
        }
        &__text {
          font-size: 15px;
        }
      }
    }
  }
}

@media (max-width: 1200px) {
  .anime {
    &__wrapper {
      grid-template-columns: 1fr;
    }
    &__list {
      grid-template-columns: repeat(4, 1fr);
    }
    &__filters {
      &-sticker {
        display: none;
      }
    }
  }
  .top-anime-slider {
    &__slide {
      height: 400px;
    }
    &__title {
      font-size: 30px !important;
    }
    &__info {
      overflow-y: auto;
      padding: 20px ;
    }
    &__descr {
      font-size: 15px;
    }
    &__genre {
      flex-shrink: 1;
      font-size: 13px;
    }
    &__button {
      flex-shrink: 0;
      padding: 20px !important;
      margin-left: 10px;
      font-size: 14px !important;
    }
  }
  .recent-recommendations {
    &__list {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      column-gap: 20px;
    }
    &__title {
      font-size: 14px;
    }
  }
  .single-anime {
    grid-template-columns: 1fr 3fr;
    &__info {
      padding: 10px;
    }
    &__score {
      &-text {
        font-size: 16px;
        &_bold {
          margin-right: 6px;
          font-size: 20px;
        }
      }
    }
    &__rating {
      font-size: 15px;
    }
    &__status {
      font-size: 15px;
    }
    &__genre {
      &-item {
        font-size: 15px;
      }
    }
    &__main-title {
      font-size: 20px;
    }
    &__secondary-title {
      font-size: 18px;
    }
    &__release {
      font-size: 14px;
    }
    &__descr {
      font-size: 14px;
    }
  }
  .related-anime {
    &__title {
      font-size: 20px;
    }
    &__item {
      &-img {
        width: 60px;
      }
      &-title {
        font-size: 14px;
      }
    }
  }
  .recommendations {
    padding: 25px 0 25px 20px;
    &__wrapper {
      grid-template-columns: repeat(4, 1fr);
    }
    &__title {
      font-size: 20px;
    }
  }
  .css {
    &-1r4vtzz, &-48ayfv {
      width: 130px !important;
    }
  }
  .search-results {
    grid-template-columns: 2fr 1fr;
  }
  .user-profile {
    padding: 0 20px;
    gap: 20px;
    &__content {
      padding: 40px 20px;
    }
    &__change {
      column-gap: 50px;
    }
  }
  .error-message {
    &_small {
      .error-message {
        &__text {
          font-size: 14px;
        }
      }
    }
  }
}

@media (max-width: 992px) {
  .anime {
    &__wrapper {
      grid-template-columns: 1fr;
    }
    &__list {
      grid-template-columns: repeat(3, 1fr);
      &_user {
        padding: 0 40px;
        grid-template-columns: repeat(4, 1fr);
      }
    }
    &__filters {
      &-item {
        flex-direction: row;
        justify-content: space-between;
        width: 100%;
      }
    }
  }
  .search {
    width: 350px;
  }
  .top-anime-slider {
    &__slide {
      height: 350px;
    }
    &__title {
      font-size: 22px !important;
    }
  }
  .single-anime {
    &__score {
      &-text {
        font-size: 14px;
        &_bold {
          font-size: 18px;
        }
      }
    }
    &__rating {
      font-size: 14px;
    }
    &__status {
      font-size: 14px;
    }
    &__genre {
      &-item {
        font-size: 13px;
      }
    }
    &__main-title {
      font-size: 18px;
    }
    &__secondary-title {
      font-size: 15px;
    }
    &__release {
      font-size: 12px;
    }
    &__descr {
      font-size: 13px;
    }
  }
  .related-anime {
    &__title {
      font-size: 18px;
    }
    &__wrapper {
      column-gap: 10px;
    }
    &__item {
      column-gap: 10px;
      &-title {
        font-size: 13px;
      }
    }
  }
  .recommendations {
    &__wrapper {
      grid-template-columns: repeat(3, 1fr);
    }
    &__title {
      font-size: 18px;
    }
  }
  .css {
    &-1r4vtzz, &-48ayfv {
      width: 120px !important;
    }
  }
  .user-anime-list {
    grid-template-columns: 1fr;
    padding: 0 10px;
  }
  .user-profile {
    grid-template-columns: 1fr;
    &__content {
      padding: 30px 20px;
    }
    &__change {
      column-gap: 50px;
    }
  }
  .user-card {
    width: 40%;
    margin: 0 auto;
    &__list {
      display: none !important;
    }
  }
}
/* ... */

